# lexcheck

./: .gitignore  README.md  pyproject.toml  run_experiments.sh  run_refinement.py  run_test_generation.py  setup.py  train_setup.sh
Ollama_chat/: ollama_chat.py
Research Questions/: RQ1-2-qualitative.ipynb
mturk_survey/: README_survey.md  start_mac_linux.sh  start_survey_server.py  start_windows.bat
mturk_survey/data/: batch_manifest.csv
mturk_survey/public/: index.html  survey.html
mturk_survey/public/batches/: ag_news_001.json  ag_news_002.json  ag_news_003.json  ag_news_004.json  ag_news_005.json  ag_news_006.json  ag_news_007.json  ag_news_008.json  github_001.json  github_002.json  github_003.json  github_004.json  github_005.json  github_006.json  github_007.json  github_008.json  github_009.json  github_010.json  github_011.json  github_012.json  github_013.json  github_014.json  github_015.json  github_016.json  github_017.json  github_018.json  github_019.json  github_020.json  github_021.json  sst2_001.json  sst2_002.json  sst2_003.json  sst2_004.json  sst2_005.json  sst2_006.json  sst2_007.json  sst2_008.json  sst2_009.json  sst2_010.json
mturk_survey/results/: human_metric_joined.csv
mturk_survey/results/original_factor_analysis_fixed/: enriched_human_with_original_metadata_fixed.csv  (+2 more)
mturk_survey/scripts/: analyze_all_results_attention.py  analyze_original_factors_fixed.py  make_survey_link_csv.py  map_human_to_metric.py  merge_server_results_with_mturk.py
src/: config.py  data_utils.py  mining.py  models.py  mutator.py  utils.py
