[project]
name = "LexCheck"
version = "0.1.0"
description = "Adversarial testing for transformer models"
readme = "README.md"
requires-python = ">=3.10,<3.12"  # only support 3.10 和 3.11
dependencies = [
    "accelerate>=0.20.0",
    "captum>=0.6.0",
    "datasets>=2.14.0",
    "matplotlib-venn>=0.11.0",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
    "torch>=2.0.0",  #
    "tqdm>=4.65.0",
    "transformers>=4.30.0",
    "typer>=0.9.0",
    "sentencepiece>=0.1.99",
    "evaluate>=0.4.0",
]

[project.scripts]
LexCheck = "LexCheck.cli:app"

[build-system]
requires = ["setuptools>=61.0", "wheel", "numpy>=1.24.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["LexCheck*"]